# cs221-sentiment-analysis-for-banking

./: .gitignore  README.md  WORKFLOW.md  app.py  pyproject.toml  requirements.txt  train.py
data/: neutral_augmented.jsonl  test.jsonl  train.jsonl  train_augmented.jsonl
data/processed/: train_processed.csv  val_processed.csv
data/processed_aug/: test_processed.csv  train_processed.csv  val_processed.csv
notebooks/: 01_eda.ipynb  02_data-preprocessing.ipynb  03_data_augmentation.ipynb  03_ggcolab_train.ipynb  04_data_augmentation.ipynb
scripts/: colab_train.ipynb
utils/: __init__.py  analyzer.py  model_loader.py  predictor.py
